Added bootstrapping + minor edits

--- a/Methods.tex
+++ b/Methods.tex
@@ -20,7 +20,7 @@ Agar-pads were prepared by dissolving 2\% agarose in culture medium. In experime
 
 \subsection*{Microscopy}
 \subsubsection*{Microscope set-up}
-Imaging was performed using an inverted microscope (Nikon Ti-E) equipped with a 100X TIRF Nikon objective (NA 1.49, oil immersion) and a 1.5X Nikon magnification lens (pixel size = 107 nm). Fluorescence excitation was achieved using 488- and 561-nm lasers (Coherent OBIS) in HILO (Highly Inclined Laminar Optical sheet) configuration. Excitation light and fluorescence emission were separated using a dual-wavelength dichroic filter (TRF59904, Chroma), and the fluorescence signal was detected on an EMCCD (Electron Multiplying Charge-Coupled Device) camera (iXion Ultra 897, Andor). The hardware was controlled and images were saved using MetaMorph(Molecular Devices; v7.8.13.0). The HILO configuration was established using the iLas variable angle TIRF control window. All experiments were performed at 37\celsius, using an Okolab microscope cage incubator equipped with dark panels.
+Imaging was performed using an inverted microscope (Nikon Ti-E) equipped with a 100X TIRF Nikon objective (NA 1.49, oil immersion) and a 1.5X Nikon magnification lens (pixel size = 107 nm). Fluorescence excitation was achieved using 488- and 561-nm lasers (Coherent OBIS) in HILO (Highly Inclined Laminar Optical sheet) configuration. Excitation light and fluorescence emission were separated using a dual-wavelength dichroic filter (TRF59904, Chroma), and the fluorescence signal was detected on an EMCCD (Electron Multiplying Charge-Coupled Device) camera (iXion Ultra 897, Andor). The hardware was controlled and images were saved using MetaMorph (Molecular Devices; v7.8.13.0). The HILO configuration was established using the iLas variable angle TIRF control window. All experiments were performed at 37\celsius, using an Okolab microscope cage incubator equipped with dark panels.
 
 \subsubsection*{Data acquisition}
 For each sample, a Metamorph journal was used to acquire images on 40 different positions, each separated by 200 µm. The full camera sensor (512x512 pixels) was used. At each position, the acquisition parameters were as follows:
@@ -31,24 +31,24 @@ For each sample, a Metamorph journal was used to acquire images on 40 different 
 
 \paragraph*{SYFP2 fluorescence} When imaging the RecA-SYFP2 fusion, single fluorescence images were interleaved with the 561-nm excitation. SYFP2 fluorescence was excited at 488 nm ($\sim$2 mW), with an exposure time of 50 ms and EM camera gain of 100.
 
-\paragraph*{Nucleoid imaging} Sytox Green fluorescence was excited at 488 nm ($\sim$2 mW) with an exposure time of 50 ms and an EM camera gain of 100.
+\paragraph*{Nucleoid imaging} Sytox Green fluorescence was excited at 488 nm ($\sim$2 mW) with an exposure time of 50 ms and an EM camera gain of 100. A single image was acquired for each position.
 
 
 \subsection*{Data analysis}
-The general data analysis workflow is described in Supp. Figure \ref{SIFig:analysis_workflow}. In brief, after acquisition, the raw microscopy images were stored in .tif format on a dedicated Omero server (OME). They were directly accessed by the BACMMAN ImageJ plugin\cite{Ollion2019}, which performed image-related tasks such as denoising of fluorescence images, cell segmentation (including manual curation of incorrectly segmented cells), and fluorescent spot detection. Finally, measurement tables in CSV format were exported from BACMMAN and loaded in Jupyter Notebooks using the \href{https://gitlab.com/MEKlab/pyberries}{PyBerries package} (version 0.2.22) in Python (version 3.11). The data table were manipulated using PyBerries and the pandas library (version 2.2.0). Figures were generated in Jupyter Notebooks using the Seaborn library (version 0.13.2).
+The general data analysis workflow is described in Supp. Figure \ref{SIFig:analysis_workflow}. In brief, after acquisition, the raw microscopy images were stored in .tif format on a dedicated Omero server (OME). They were directly accessed by the BACMMAN ImageJ plugin\cite{Ollion2019}, which performed image processing tasks such as denoising of fluorescence images, cell segmentation (including manual curation of incorrectly segmented cells), nucleoid segmentation, and fluorescent spot detection. Measurement tables in CSV format were exported from BACMMAN and loaded in Jupyter Notebooks using the \href{https://gitlab.com/MEKlab/pyberries}{PyBerries package} (version 0.2.22) in Python (version 3.11). The data tables were manipulated using PyBerries and the pandas library (version 2.2.0). Figures were generated in Jupyter Notebooks using the Seaborn library (version 0.13.2). Figures that contained several panels were assembled in Inkscape (version 1.3.2).
 
 \subsubsection*{BACMMAN pipeline}
 \paragraph*{Deep-learning denoising of fluorescence images}
 We improved a self-supervised denoising neural network by making it use the previous and next frames in the timelapse and performing deconvolution simultaneously. Our method is based on a previously developed method \cite{Ollion2021} which uses an encoder-decoder convolutional neural network that performs denoising (DNet) as well as a fully connected neural network that recovers the noise distribution used to compute the self-supervised loss. In order to include previous and next frames, we modified the architecture of DNet so that the encoder is shared between frames (t-1, t and t+1), i.e. it processes each frame independently. At each contraction level, the residual tensors corresponding to each frame are combined using a 1x1 convolution and fed to the decoder. The same applies for the feature tensors and the last level of the decoder. The decoder only predicts the central frame (t) and the same self-supervised loss is used. We observe a dramatic improvement of denoising performance, which implies that the proposed architecture benefits from using information from adjacent frames. It has been shown that performing denoising and deconvolution simultaneously dramatically improves deconvolution performance\cite{Kobayashi2020}. We computed the experimental PSF of our system by averaging hundreds of bead images cropped in a 33x33 pixels area around each bead, and normalised so that values sum to one. The obtained averaged images were used during training as kernel for a 2D convolution at the end of the neural network. At prediction time, convolution was removed.
 
 \paragraph{Cell segmentation}
-The 16-image brightfield Z-stack was first cropped to 5 images on one side of the focus, as required by our segmentation algorithm. The 5-image stack was used as input to Talissman, a U-net-based segmentation algorithm. In brief, the U-net model predicts an Euclidean distance map, where the value of each pixel is its predicted distance to the nearest background pixel. A watershed algorithm is then applied to retrieve cell contours. This approach allowed us to accurately segment cells from bright-field images, including when they formed tight clusters. Following segmentation, post-filters were applied to dilate the segmented regions slightly and to remove any cells that were in contact with the edge of the image and might therefore be cropped. Finally, all segmentation masks were visually inspected and curated to remove cells that were incorrectly segmented ($\sim$1\% of total cells).
+The 16-image brightfield Z-stack was first cropped to 5 images on one side of the focus, as required by our segmentation algorithm. The 5-image stack was used as input to Talissman, a U-net-based segmentation algorithm. In brief, the U-net model predicts a Euclidean distance map, where the value of each pixel is its predicted distance to the nearest background pixel. A watershed algorithm is then applied to retrieve cell contours. This approach allowed us to accurately segment cells from bright-field images, including when they formed tight clusters. Any overlapping cells were manually removed from the analysis. Following segmentation, post-filters were applied to dilate the segmented regions slightly and to remove any cells that were in contact with the edge of the image and might therefore be cropped. Finally, all segmentation masks were visually inspected and curated to remove cells that were incorrectly segmented ($\sim$1\% of total cells).
 
 \paragraph*{Detection of RecB spots}
 Fluorescent spots were seg\-men\-ted using a seeded watershed algorithm on the Laplacian transform of the denoised RecB image. The quality of the segmentation was visually assessed by overlaying the segmentation mask on the raw fluorescence images. The segmentation parameters were optimised, but no manual curation was applied to avoid introducing user bias in the results.
 
 \paragraph*{Classification of RecA structures}
-Due to the large diversity in the shape and intensity of structures formed by RecA during the repair process, segmentation by a rule-based algorithm (such as performed for the RecB spots) was challenging. We therefore designed a U-net-based deep-learning model capable of classifying objects (in our case cells) based on the type of RecA structure they contained (Supp. Figure \ref{SIFig:object_class}). In brief, the model was given as input the cell segmentation mask and the RecA-SYFP2 fluorescence image, and it provided as output a single class for each object: diffuse fluorescence, RecA spot, or RecA filament. The model's predictions were 84\% accurate, as evaluated against a test set of manually labelled data that was not used in training.
+Due to the large diversity in the shape and intensity of structures formed by RecA during the repair process, segmentation by a rule-based algorithm (such as performed for the RecB spots) is challenging. We therefore designed a U-net-based deep-learning model capable of classifying objects (in this case, cells) based on the type of RecA structure they contained (Supp. Figure \ref{SIFig:object_class}). In brief, the model was given as input the cell segmentation mask and the RecA-SYFP2 fluorescence image, and it provided as output a single class for each object: diffuse fluorescence, RecA spot, or RecA filament. The model's predictions were 84\% accurate, as evaluated against a test set of manually labelled data that was not used in training.
 
 \paragraph*{Nucleoid segmentation}
 Sytox Green fluorescence images were processed with a rolling-ball noise subtraction (radius 6 pixels), and nucleoids segmented by a seeded watershed algorithm. The seed threshold was determined by Otsu's method\cite{Otsu1979}. Any segmented regions that were in contact with each other within the same cell were merged, and segmented regions smaller than 5 pixels were excluded. Regions with weak signal-to-noise ratio (SNR < 2) were also excluded. For each segmented region, the SNR was computed as follows:
@@ -58,19 +58,21 @@ Sytox Green fluorescence images were processed with a rolling-ball noise subtrac
 with $\overline{F}$ the mean fluorescence intensity in the object, $\overline{B}$ the mean background intensity, and $std(B)$ the standard deviation of background intensities.
 
 \paragraph*{Measurements}
-As the final step of the pipeline, BACMMAN performed several measurements on the objects created (cells and RecB spots). These measurements included cell length, cell area, raw fluorescence intensity, background-subtracted fluorescence intensity, number of RecB spots in the cell, and position of the RecB spots along the long- and short-axis of the cell. For each dataset, BACMMAN produced a "cell table" with one row per cell, and a "RecB spots table" with one row per spot.
+As the final step of the pipeline, BACMMAN performed several measurements on the objects created (cells, RecB spots and nucleoids). These measurements included cell length, cell area, raw fluorescence intensity, background-subtracted fluorescence intensity, number of RecB spots in the cell, and position of the RecB spots and nucleoids along the long- and short-axis of the cell. For each dataset, BACMMAN produced one csv table per object.
 
 \subsubsection*{PyBerries}
 \paragraph*{Data import and format}
-The PyBerries package, combined with the pandas library, allowed to easily import the multiple CSV tables produced by BACMMAN, and perform operations such as grouping, normalisation, fitting, or statistical tests.
+The PyBerries package, combined with the pandas library, allowed to easily import the multiple CSV tables produced by BACMMAN, and perform operations such as grouping, aggregations, normalisation and curve fitting.
 
-\paragraph*{Fitting RecB DNA binding times}  % To do: add bootstrapping procedure
-The binding time of individual RecB molecules on DNA was extracted in BACMMAN as the lifetime of the bright JF549 fluorescent spots. The binding times histogram was fitted with a bi-exponential decay function of the type $y=a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$. Because we are unable to differentiate whether the disappearance of a fluorescent spot is due to photobleaching or to unbinding and returning to the pool of diffusing molecules, we must consider that the fitted "spot disappearance rates" $k_1$ and $k_2$ are a sum of RecB's dissociation rate from DNA and the dye's bleaching rate ($k_1=k_{d1}+k_b$ and $k_2=k_{d2}+k_b$, with $k_{d1}$ and $k_{d2}$ the two RecB dissociation rates, and $k_b$ the bleaching rate). The bleaching rate was calculated for each dataset, as described in Supp. Note \ref{note:dye_bleaching} and Supp. Figure \ref{SIFig:dye_bleaching} and subtracted to retrieve the true RecB dissociation rates from DNA.
+\paragraph*{Fitting RecB DNA binding times}
+The binding time of individual RecB molecules on DNA was extracted in BACMMAN as the lifetime of the bright JF549 fluorescent spots. The binding times histogram was fitted with a bi-exponential decay function of the type $y=a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$. To improve the reliability of the fits, a bootstrapping procedure was used. For each group, 100 resamplings with replacement were made, and fitted individually. Each fit parameter was estimated as the median of all fitted parameters.
+
+Because we are unable to differentiate whether the disappearance of a fluorescent spot is due to photobleaching or to unbinding and returning to the pool of diffusing molecules, we must consider that the fitted "spot disappearance rates" $k_1$ and $k_2$ are a sum of RecB's dissociation rate from DNA and the dye's bleaching rate ($k_1=k_{d1}+k_b$ and $k_2=k_{d2}+k_b$, with $k_{d1}$ and $k_{d2}$ the two RecB dissociation rates, and $k_b$ the bleaching rate). The bleaching rate was calculated for each dataset, as described in Supp. Note \ref{note:dye_bleaching} and Supp. Figure \ref{SIFig:dye_bleaching} and subtracted to retrieve the true RecB dissociation rates from DNA.
 
 \paragraph*{Thresholding to differentiate short- and long-lived RecB binding events}
-For Figures that required classifying RecB spots as either short- or long-lived DNA binding events, a spot lifetime threshold was determined for each dataset from the bi-exponential fits, such that spots that had a lifetime longer than the threshold had a 99\% probability of being in the "long-lived" population as defined by the fit.
+For Figures that required classifying RecB spots as either short- or long-lived events, a spot lifetime threshold was determined for each dataset from the bi-exponential fits, such that spots that had a lifetime longer than the threshold had a 99\% probability of being in the "long-lived" population. Of note, spots with a lifetime shorter than this threshold could not reliably be attributed to one or the other population.
 
 \subsection*{Code availability}
-Instructions to install the BACMMAN ImageJ plugin can be found on the \href{https://github.com/jeanollion/bacmman/wiki/Installation}{BACMMAN wiki}. The PyBerries package can be found on the \href{https://pypi.org/project/PyBerries/}{Python Package Index}, and its source code is available on \href{https://gitlab.com/MEKlab/pyberries}{Gitlab}. The Jupyter Notebooks used to make the article figures are also available on \href{https://github.com/DanielThedie/RecB_article}{github}.
+Instructions to install the BACMMAN ImageJ plugin can be found on the \href{https://github.com/jeanollion/bacmman/wiki/Installation}{BACMMAN wiki}. The PyBerries package can be found on the \href{https://pypi.org/project/PyBerries/}{Python Package Index}, and its source code is available on \href{https://gitlab.com/MEKlab/pyberries}{Gitlab}. The Jupyter Notebooks used to make the article figures are also available on \href{https://github.com/DanielThedie/RecB_article}{Github}.
 
 
