--- a/Discussion.tex
+++ b/Discussion.tex
@@ -1,3 +1,3 @@
 \section*{Discussion}
 
-
+% Linking the RecB recruitment rate to DSB formation rate (ok in WT, more difficult in mutants due to re-recruitment to the same DSB)
