--- a/Article.tex
+++ b/Article.tex
@@ -22,11 +22,13 @@
 \shorttitle{}
 
 \author[1]{Daniel Thédié}
+\author[2]{Alessia Lepore}
 \author[1]{Lorna McLaren}
 \author[1]{Meriem El Karoui}
 
 
 \affil[1]{Institute of Cell Biology, University of Edinburgh, Edinburgh, UK}
+\affil[2]{Ecole Polytechnique, Paris-Saclay, France}
 
 \maketitle
 
@@ -56,6 +58,7 @@ meriem.elkaroui\at ed.ac.uk
 
 \begin{acknowledgements}
 - David Leach for insightful discussions
+
 - Jean for BACMMAN/software developments
 \end{acknowledgements}
 
